# PALIMPSEST

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  open-editor.ps1  pgen-workbench.ps1  play.ps1  prototype-combat.ps1  workbench.ps1
assets/fonts/: AnonymousPro-OFL.txt
assets/pali/: apple.pali  fire.pali  moth.pali  stone.pali  tree.pali
catalogues/: e3.json  e45-palimpsest20.json
checks/: verify.ps1
checks/Chronicle.Core.Checks/: Chronicle.Core.Checks.csproj  Program.cs
checks/Chronicle.Visuals.Checks/: Chronicle.Visuals.Checks.csproj  Program.cs
docs/: ARCHITECTURE.md  CODEMAP.md  COMBAT-GRAMMAR-PRESSURE-TEST.md  DECISION.md  DESIGN-EVALUATION-2026-07-20.md  DEVELOPMENT.md  ENGINE-SPEC.md  EXPERIENCE-PASS-1-FROM-HARNESS-TO-GAME.md  GATE-3B-VISUAL-UAT.md  GENERATION.md  GOAL-2-A-WORD-KEPT.md  GOAL-4-THREE-OPENINGS.md  GOAL-6A-A-REAL-FIGHT.md  GOAL-6B-POWER-COMES-HOME.md  GOAL-6C-ONE-RULEBOOK.md  GOAL-7A-SOMEONE-COMES-HOME.md  GOAL-7B-A-DIRECTIVE-NOT-UNIT-CONTROL.md  GOAL-7C-FROM-HARNESS-TO-GAME.md  HANDOFF.md  INTERACTION.md  LANGUAGE.md  MODIFIER-GRAMMAR-DIRECTION.md  P-GEN-E4-5-READINESS-REVIEW.md  P-GEN-E5-1-UAT.md  P-GEN-E5-1-VISUAL-AUTHORING-SPIKE.md  P-GEN-E5-INTEGRATION.md  P-GEN-E5-UAT.md  PALIMPSEST-CREATIVE-DIRECTOR-RESEARCH.md  POWER-PROGRESSION-DIRECTION.md  PROCEDURAL-VISUAL-GRAMMAR-ENGINE-SPEC.md  QUD-GENERATION-ALIGNMENT.md  REFERENCES.md  ROADMAP.md  RPG-SUCCESSOR-REBUILD-DIRECTION.md  SLICE-1-FIRST-HORIZON.md  SLICE-3-WORLD-VISUAL-GRAMMAR.md  VISION.md
docs/adr/: 0001-use-a-knowledge-gated-structured-lens.md  0001-use-godot-with-a-csharp-chronicle-core.md  0002-make-construction-semantic.md  0002-pin-world-grammar-version-per-chronicle.md  0003-capture-lineage-inheritance-at-birth.md  0003-use-verbs-linked-modifiers-and-world-targets.md  0004-use-p-gen-as-the-visual-authoring-pipeline.md  0005-use-one-character-scale-across-generated-areas.md  0006-co-locate-p-gen-without-crossing-the-runtime-seam.md
docs/archive/: README.md
fixtures/palimpsest20/: accepted-reference.json  (+2 more)
src/: lexicon.c  lexicon.h  main.c  pali.h  pali_compiler.c  pali_internal.h  pali_lexer.c  pali_vm.c  platform.c  platform.h  save.c  save.h  ui.c  ui.h  world.c  world.h
tests/: test_main.c
tools/: verify.ps1
(+160 files in other folders)
